tests/paczka1/fuzzy1/89519444.err
Error in line 4: A726 A923 35,8
Error in line 3: 92Syfx6n S7 22,4
Error in line 7: 72{FVx S7 5,6
Error in line 12: JWZTmn S370 3,2
Error in line 13: pHbP61 S7 19,2
Error in line 31: ix00uiiU8n A726 90,6
Error in line 34: 723FVx S370 29,9
Error in line 29: A726 S370 35,8
